--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body {
     padding: 12px;
 
     display: flex;
-    justify-content: left;
+    justify-content: space-between;
     align-items: center;
 }
 
