--- a/style.css
+++ b/style.css
@@ -10,6 +10,23 @@ body {
     font-family: "Ubuntu", sans-serif;
 }
 
+a {
+    text-decoration: none;
+    color: #fff
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    font-weight: bold;
+}
+
 .container {
     background: #fff;
     max-width: 450px;
@@ -118,13 +135,67 @@ body {
     background: #ef9a9a;
 }
 
-.list .footer {
+.footer {
     background: #f0f0f5;
     border-radius: 4px;
     padding: 12px;
+    margin-top: 4px;
 }
 
 .footer p {
     color: #999;
     font-size: 12px;
+}
+
+.details-container {
+    background: #fff;
+    max-width: 700px;
+    margin-top: 5%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 12px;
+
+}
+
+.row {
+    display: grid;
+    grid-template-areas: "descricao imagem";
+    justify-content: space-between;
+    padding: 12px;
+}
+
+.details {
+    width: 300px;
+    border: 1px solid #f0f0f5;
+    border-radius: 4px;
+    margin-right: 4px;
+    margin-left: 8px;
+    padding: 16px;
+}
+
+.details dl dt {
+    margin-top: 4px;
+    margin-bottom: 4px;
+    font-weight: bold;
+    color: #666;
+}
+
+.details dl dd {
+    margin-top: 4px;
+    margin-bottom: 12px;
+    color: #999;
+}
+
+.image {
+    width: 400px;
+    border: 1px solid #f0f0f5;
+    border-radius: 4px;
+    margin-right: 8px;
+    margin-left: 8px;
+    padding: 16px;
+}
+
+.image img {
+    max-width: 100%;
+    height: auto;
 }
